<resources>
    <string name="app_name">ActivityMonitoringAndLocalization</string>
    <string name="menu_header">IN4254 - Smartphone Sensing</string>
    <string name="btn_menu_activity">Activity Monitoring</string>
    <string name="btn_menu_localization">Localization</string>
    <string name="btn_walking">Start Walking</string>
    <string name="btn_standing">Start Standing</string>
    <string name="btn_walking_stop">Stop Walking</string>
    <string name="btn_standing_stop">Stop Standing</string>
    <string name="header_activity_monitoring">Activity Monitoring - Accelerometer</string>
    <string name="lbl_x_axis">X-Axis</string>
    <string name="lbl_default">0.0</string>
    <string name="lbl_y_axis">Y-Axis</string>
    <string name="btn_test_acc">Test Activity</string>
    <string name="lbl_none">NONE</string>
    <string name="lbl_wifi_rssi">WIFI RSSI</string>
    <string name="btn_scan_and_sample_wifi_info">Scan WiFi</string>
    <string name="btn_scan_and_sample_wifi_info_scan">Scanning WiFi</string>
    <string name="btn_test_localization">Test Localization</string>
    <string name="lbl_location">Location:</string>
    <string name="lbl_assig_1">Assignment 1</string>
    <string name="lbl_assig_2">Assignment 2</string>

    <!-- PF Localization -->
    <string name="lbl_adv_localization">PF Localization</string>
    <string name="lbl_angle">Angle:</string>
    <string name="lbl_orien_azimuth">Azimuth (Z):</string>
    <string name="lbl_orien_pitch">Pitch (X):</string>
    <string name="lbl_orien_roll">Roll (Y):</string>
    <string name="lbl_activity_PF">Activity:</string>
    <string name="btn_initial_belief_PA">INITIAL BELIEF PA</string>
    <string name="btn_initial_belief_bayes">INITIAL BELIEF BAYES</string>
    <string name="btn_sense_bayes">SENSE BAYES</string>
    <string name="lbl_accel_X">Accel-X:</string>
    <string name="lbl_accel_Y">Accel-Y:</string>
    <string name="lbl_accel_Z">Accel-Z:</string>
    <string name="lbl_total_step">Steps:</string>
    <string name="lbl_dx">dX:</string>
    <string name="lbl_dy">dY:</string>
    <string name="btn_clear_data">CLEAR DATA</string>

    <!-- Localization -->
    <string name="cell_1">C0</string>
    <string name="cell_2">C1</string>
    <string name="cell_3">C2</string>
    <string name="cell_4">C3</string>
    <string name="cell_5">C4</string>
    <string name="cell_6">C5</string>
    <string name="cell_7">C6</string>
    <string name="cell_8">C7</string>
    <string name="cell_9">C8</string>
    <string name="cell_10">C9</string>

    <!-- File storage locations-->
    <string name="accelerometer_data_file">accelerometerData.txt</string>
    <string name="wifi_data_file">wifiData.txt</string>
    <string name="activity_file_feature_sd">activity_mon_sd.txt</string>
    <string name="activity_file_feature_fft">activity_mon_fft.txt</string>
    <string name="state">State:</string>
    <string name="clear_data">Clear Data</string>
    <string name="assignment_1">Assignment 1</string>
    <string name="initial_belief_pa">Initial Belief PA</string>
    <string name="initial_belief_bayes">Initial Belief Bayes</string>
    <string name="sense_bayes">Sense Bayes</string>
</resources>